Extracting Ask HN and Show HN Posts

--- a/HackerNewsPost.ipynb
+++ b/HackerNewsPost.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,40 @@
     "print(headers)\n",
     "print('\\n')\n",
     "print(hn[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1744\n",
+      "1162\n",
+      "17194\n"
+     ]
+    }
+   ],
+   "source": [
+    "ask_posts = []\n",
+    "show_posts = []\n",
+    "other_posts = []\n",
+    "\n",
+    "for row in hn:\n",
+    "    title = row[1] \n",
+    "    if title.lower().startswith('ask hn'):\n",
+    "        ask_posts.append(title)\n",
+    "    elif title.lower().startswith('show hn'):\n",
+    "        show_posts.append(title)\n",
+    "    else:\n",
+    "        other_posts.append(title)\n",
+    "\n",
+    "print(len(ask_posts))\n",
+    "print(len(show_posts))\n",
+    "print(len(other_posts))\n"
    ]
   },
   {
