Extract Ask HN and Show HN Posts

--- a/HackerNewsPost.ipynb
+++ b/HackerNewsPost.ipynb
@@ -93,6 +93,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Ask HN: How to improve my personal website?',\n",
+       " 'Ask HN: Am I the only one outraged by Twitter shutting down share counts?',\n",
+       " 'Ask HN: Aby recent changes to CSS that broke mobile?',\n",
+       " 'Ask HN: Looking for Employee #3 How do I do it?',\n",
+       " 'Ask HN: Someone offered to buy my browser extension from me. What now?',\n",
+       " 'Ask HN: Limiting CPU, memory, and I/O usage on a program for testing']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ask_posts[:6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_ask_comments = 0\n",
+    "for post in ask_posts:\n",
+    "    num_comments = post[4]\n",
+    "print(num_comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
