Calculating the Average Number of Comments for Ask HN and Show HN Posts

--- a/HackerNewsPost.ipynb
+++ b/HackerNewsPost.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,55 +59,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1744\n",
-      "1162\n",
-      "17194\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ask_posts = []\n",
     "show_posts = []\n",
     "other_posts = []\n",
     "\n",
+    "# Loop through each row in hn\n",
     "for row in hn:\n",
-    "    title = row[1] \n",
+    "    title = row[1]  # Assign the title in each row to a variable named title\n",
     "    if title.lower().startswith('ask hn'):\n",
-    "        ask_posts.append(title)\n",
+    "        ask_posts.append(row)\n",
     "    elif title.lower().startswith('show hn'):\n",
-    "        show_posts.append(title)\n",
+    "        show_posts.append(row)\n",
     "    else:\n",
-    "        other_posts.append(title)\n",
-    "\n",
-    "print(len(ask_posts))\n",
-    "print(len(show_posts))\n",
-    "print(len(other_posts))\n"
+    "        other_posts.append(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Ask HN: How to improve my personal website?',\n",
-       " 'Ask HN: Am I the only one outraged by Twitter shutting down share counts?',\n",
-       " 'Ask HN: Aby recent changes to CSS that broke mobile?',\n",
-       " 'Ask HN: Looking for Employee #3 How do I do it?',\n",
-       " 'Ask HN: Someone offered to buy my browser extension from me. What now?',\n",
-       " 'Ask HN: Limiting CPU, memory, and I/O usage on a program for testing']"
+       "[['12296411',\n",
+       "  'Ask HN: How to improve my personal website?',\n",
+       "  '',\n",
+       "  '2',\n",
+       "  '6',\n",
+       "  'ahmedbaracat',\n",
+       "  '8/16/2016 9:55'],\n",
+       " ['10610020',\n",
+       "  'Ask HN: Am I the only one outraged by Twitter shutting down share counts?',\n",
+       "  '',\n",
+       "  '28',\n",
+       "  '29',\n",
+       "  'tkfx',\n",
+       "  '11/22/2015 13:43'],\n",
+       " ['11610310',\n",
+       "  'Ask HN: Aby recent changes to CSS that broke mobile?',\n",
+       "  '',\n",
+       "  '1',\n",
+       "  '1',\n",
+       "  'polskibus',\n",
+       "  '5/2/2016 10:14'],\n",
+       " ['12210105',\n",
+       "  'Ask HN: Looking for Employee #3 How do I do it?',\n",
+       "  '',\n",
+       "  '1',\n",
+       "  '3',\n",
+       "  'sph130',\n",
+       "  '8/2/2016 14:20'],\n",
+       " ['10394168',\n",
+       "  'Ask HN: Someone offered to buy my browser extension from me. What now?',\n",
+       "  '',\n",
+       "  '28',\n",
+       "  '17',\n",
+       "  'roykolak',\n",
+       "  '10/15/2015 16:38'],\n",
+       " ['10284812',\n",
+       "  'Ask HN: Limiting CPU, memory, and I/O usage on a program for testing',\n",
+       "  '',\n",
+       "  '2',\n",
+       "  '1',\n",
+       "  'zatkin',\n",
+       "  '9/26/2015 23:23']]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,37 +141,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H\n"
+      "24483\n"
      ]
     }
    ],
    "source": [
     "total_ask_comments = 0\n",
     "for post in ask_posts:\n",
-    "    num_comments = post[4]\n",
-    "print(num_comments)"
+    "    num_comments = int(post[4])\n",
+    "    total_ask_comments +=num_comments\n",
+    "print(total_ask_comments)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.038417431192661\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(ask_posts) > 0:\n",
+    "    avg_ask_comments = total_ask_comments/len(ask_posts)\n",
+    "else:\n",
+    "    avg_ask_comments = 0\n",
+    "print(avg_ask_comments)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11988\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_show_comments = 0\n",
+    "for posts in show_posts:\n",
+    "    num_comments = int(posts[4])\n",
+    "    total_show_comments += num_comments\n",
+    "print(total_show_comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.31669535283993\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(show_posts) > 0 :\n",
+    "    avg_show_comments = total_show_comments/len(show_posts)\n",
+    "else:\n",
+    "    avg_show_comments =0\n",
+    "\n",
+    "print(avg_show_comments)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After running the above code, we can determine which type of post (\"Ask HN\" or \"Show HN\") receives more comments on average. Based on the average number of comments computed, we will print a message indicating whether \"Ask HN\" posts or \"Show HN\" posts receive more comments on average."
+   ]
   }
  ],
  "metadata": {
