--- a/HackerNewsPost.ipynb
+++ b/HackerNewsPost.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "  '9/26/2015 23:23']]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -230,6 +230,71 @@
    "source": [
     "After running the above code, we can determine which type of post (\"Ask HN\" or \"Show HN\") receives more comments on average. Based on the average number of comments computed, we will print a message indicating whether \"Ask HN\" posts or \"Show HN\" posts receive more comments on average."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['8/16/2016 9:55', 6], ['11/22/2015 13:43', 29], ['5/2/2016 10:14', 1], ['8/2/2016 14:20', 3], ['10/15/2015 16:38', 17]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime as dt\n",
+    "result_list = []\n",
+    "for post in ask_posts:\n",
+    "    created_at = post[6]\n",
+    "    num_comments = int(post[4])\n",
+    "    result_list.append([created_at, num_comments])\n",
+    "\n",
+    "print(result_list[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'09': 45, '13': 85, '10': 59, '14': 107, '16': 108, '23': 68, '12': 73, '17': 100, '15': 116, '21': 109, '20': 80, '02': 58, '18': 109, '03': 54, '05': 46, '19': 110, '01': 60, '22': 71, '08': 48, '04': 47, '00': 55, '06': 44, '07': 34, '11': 58}\n",
+      "{'09': 251, '13': 1253, '10': 793, '14': 1416, '16': 1814, '23': 543, '12': 687, '17': 1146, '15': 4477, '21': 1745, '20': 1722, '02': 1381, '18': 1439, '03': 421, '05': 464, '19': 1188, '01': 683, '22': 479, '08': 492, '04': 337, '00': 447, '06': 397, '07': 267, '11': 641}\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts_by_hour = {}\n",
+    "comments_by_hour = {}\n",
+    "for row in result_list:\n",
+    "    created_at = row[0]\n",
+    "    num_comments = row[1]\n",
+    "    date_obj = dt.datetime.strptime(created_at, \"%m/%d/%Y %H:%M\")\n",
+    "    hour = date_obj.strftime(\"%H\")\n",
+    "\n",
+    "    if hour not in counts_by_hour:\n",
+    "        counts_by_hour[hour] =1\n",
+    "        comments_by_hour[hour] = num_comments\n",
+    "    else:\n",
+    "        counts_by_hour[hour] += 1\n",
+    "        comments_by_hour[hour] +=num_comments\n",
+    "\n",
+    "print(counts_by_hour)\n",
+    "print(comments_by_hour)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
