Calculate the Average Number of Comments for Ask HN Posts by Hour

--- a/HackerNewsPost.ipynb
+++ b/HackerNewsPost.ipynb
@@ -291,6 +291,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['09', 5.5777777777777775], ['13', 14.741176470588234], ['10', 13.440677966101696], ['14', 13.233644859813085], ['16', 16.796296296296298], ['23', 7.985294117647059], ['12', 9.41095890410959], ['17', 11.46], ['15', 38.5948275862069], ['21', 16.009174311926607], ['20', 21.525], ['02', 23.810344827586206], ['18', 13.20183486238532], ['03', 7.796296296296297], ['05', 10.08695652173913], ['19', 10.8], ['01', 11.383333333333333], ['22', 6.746478873239437], ['08', 10.25], ['04', 7.170212765957447], ['00', 8.127272727272727], ['06', 9.022727272727273], ['07', 7.852941176470588], ['11', 11.051724137931034]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_by_hour = []\n",
+    "for hour in counts_by_hour:\n",
+    "    avg_comments = comments_by_hour[hour]/counts_by_hour[hour]\n",
+    "    avg_by_hour.append([hour, avg_comments])\n",
+    "\n",
+    "print(avg_by_hour)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
